fix: alignment of the last row of the quizzes to the left

--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,8 @@ section h1 {
 }
 
 section ul {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 340px);
     justify-content: space-between;
 }
 
@@ -147,7 +147,6 @@ section ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: chartreuse;
     position: relative;
 }
 
@@ -231,15 +230,25 @@ section ul {
 
 @media (max-width: 1100px) {
     main {
+        display: flex;
         flex-direction: column;
         margin: 69px auto;
+        justify-content: center;
+    }
+
+    section ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     section div {
-      justify-content: space-between;
+        justify-content: space-between;
     }
 
     .quizz {
-      width: 100%;
+        max-width: 600px;
+        width: 100%;
     }
   }
